flux/infrastructure/progressive-delivery/develop/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend
  namespace: develop
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`backend.develop.svc.cluster.local`)
      kind: Rule
      services:
        - name: backend
          port: 80
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
  namespace: develop
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`frontend.develop.svc.cluster.local`)
      kind: Rule
      services:
        - name: frontend
          port: 8080
          kind: TraefikService
